fix - syntax that docz cannot recognize

--- a/src/typescript/an experience with react-docgen-typescript.mdx
+++ b/src/typescript/an experience with react-docgen-typescript.mdx
@@ -254,7 +254,7 @@ Parser的getComponentInfo成员方法有关于props的部分是：先根据parse
 
 ## Understanding typescript
 查看typescript的[wiki](https://github.com/microsoft/TypeScript/wiki/Architectural-Overview)页面，发现在typescript的处理过程中有一个Pre-processor的过程，它的描述是这样的：
->The "Compilation Context" refers to all files involved in a "program". The context is created by inspecting all files passed in to the compiler on the command line, in order, and then adding any files they may reference directly or indirectly through import statements and /// <reference path=... /> tags. The result of walking the reference graph is an ordered list of source files, that constitute the program. When resolving imports, preference is given to ".ts" files over ".d.ts" files to ensure the most up-to-date files are processed. The compiler does a node-like process to resolve imports by walking up the directory chain to find a source file with a .ts or .d.ts extension matching the requested import. Failed import resolution does not result in an error, as an ambient module could be already declared.
+>The "Compilation Context" refers to all files involved in a "program". The context is created by inspecting all files passed in to the compiler on the command line, in order, and then adding any files they may reference directly or indirectly through import statements and "/// reference path=... /" tags. The result of walking the reference graph is an ordered list of source files, that constitute the program. When resolving imports, preference is given to ".ts" files over ".d.ts" files to ensure the most up-to-date files are processed. The compiler does a node-like process to resolve imports by walking up the directory chain to find a source file with a .ts or .d.ts extension matching the requested import. Failed import resolution does not result in an error, as an ambient module could be already declared.
   
 typescript会扫描源文件对应的import语句和reference。查看项目内的文件，原来没有引入react的类型定义@types/react。自然，typescript无法从react的js文件中提取到继承自React.Component的对象的构造器的返回值应该是一个怎样的对象，因此就得不到正确的类型了。相关的逻辑在Typescript API的createProgram方法中有出现。
 ```js
